# cocoa

./: Cargo.toml
src/: ast.rs  cacau.pest  cacau_parser.lalrpop  calculator.lalrpop  error.rs  lexer.rs  lib.rs  main.rs  utils.rs
tests/: test.rs
tests/fail/: crazy.cacau
tests/fail-interpret/: false_assert-1.cacau  false_assert-3.cacau  false_assert-4.cacau  undefined_variables-1.cacau
tests/pass/: assert_arithmetic.cacau  assign-and-use-variables.cacau  basic_functions-1.cacau  basic_functions-2.cacau  basic_functions-3.cacau  basic_functions-4.cacau  comment.cacau  expression-statements.cacau  function-call.cacau  let-statement.cacau  unary_operation.cacau
