[package]
name = "cocoa"
version = "0.1.0"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.7"

[dependencies]
from-pest = "0.3.1"
fs-err = "2.8.1"
pest = "2.4.0"
pest-ast = "0.3.3"
pest_derive = "2.4.0"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"

[dev-dependencies]
glob = "0.3.0"
